# object_detection_101

./: .gitignore  LICENSE  README.md  pyproject.toml
car_counter/: main.py
model/src/: Yolo-Basics.py  Yolo-Webcam.py
