[tool.poetry]
name = "test-project"
version = "0.1.0"
description = ""
authors = ["LionLy <lylion98@gmail.com>"]
readme = "README.md"
packages = [{include = "test_project"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
