[tool.poetry]
name = "object_detection_project"
version = "0.1.0"
description = ""
authors = ["LionLy <lylion98@gmail.com>"]
readme = "README.md"
packages = [{include = "test_project"}]

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^1.5.3"
cvzone = "^1.5.6"
ultralytics = "^8.0.57"
hydra-core = "^1.3.2"
matplotlib = "^3.7.1"
opencv-python = "^4.7.0.72"
pillow = "^9.4.0"
pyyaml = "^6.0"
requests = "^2.28.2"
scipy = "^1.10.1"
torch = "^2.0.0"
torchvision = "^0.15.1"
tqdm = "^4.65.0"
filterpy = "^1.4.5"
scikit-image = "0.19.3"
numpy = "^1.18.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
